Fixed photos pt 1
Cropped photos to focus the pictures on groupmates more.

--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,11 @@ nav p {
 }
 .profile img {
     border-radius: 10px;
-    width: 150px;
-    height: auto;
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1)
 }
 
 .profile-text{
